--- a/jws-jpa/jws-jpa-json/.settings/org.eclipse.wst.common.component
+++ b/jws-jpa/jws-jpa-json/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="jdbc">
+    <wb-module deploy-name="jws-jpa-json">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="jdbc"/>
-        <property name="java-output-path" value="/jdbc/build/classes"/>
+        <property name="java-output-path" value="/jws-jpa-json/build/classes"/>
+        <property name="context-root" value="jws-jpa-json"/>
     </wb-module>
 </project-modules>
